--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,9 +31,9 @@
             </div>
         </div>
         <div class="col-sm-5 nav-search">
-            <form>
+            <form method="GET" action="/products">
                 <div>
-                    <input type="search" placeholder="Enter products..." aria-label="Search">
+                    <input type="search" placeholder="Enter products..." aria-label="Search" name="search">
                     <button type="submit"></button>
                 </div>
             </form>
