--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -103,81 +103,13 @@
                 </div>
             </div>
             <div>
-                {{!-- for posts --}}
-                Handlebars.registerHelper('table', function(posts, comment) {
-                if(typeof posts != 'undefined' && posts.length > 0) { 
-                var srNo = 0;
-                posts.forEach( function ( post ){
-                        srNo = srNo + 1;
-                       
-<tr>
-    <td> srNo ></td>
-<td>{{post.title}} 
-<td><a href="/products/detail/{{post.id}}" title="Post Detail">Detail</a></td>
- 
-</tr>
-});
-}
-else {
-  <tr><td colspan="3"> No Data </td></tr>
-    </table>
-
                     
-                <h2> {{postDetail.title }}</h2>
-                div class="comments">
-        if(typeof comments != 'undefined' && comments != null) {
-                comments.forEach( function ( commentData ){
-                    <p> {{commentData.comment}} </p>
-                    });
-        }
-}
-                });
-        
-       
-</div>
- 
- <div>
-<textarea id="comment" rows="3" cols="50"></textarea></br>
-<input type="hidden" id="commentId" value="<{{commentId }}>">
-<input type="submit" value="Send" id="send"> 
-</body>
-<script type="text/javascript">
-var socket = io();
-    $('#send').click(function(){
-        var comment = $('#comment').val();
-        var commentId = $('#commentId').val();
-        if(comment != ''){
-            var data = {'comment': comment,'commentId': commentId};
-        $('.comments').append("<p>"+comment+"</p>");
-        $('#comment').val('');
-        }
-        
-    socket.emit('comment',data);
- 
- 
-    });
- 
-    socket.on('comment',function(data){
-        var commentId = "{{commentId}}";
-        if(commentId==data.commentId){
-            $('.comments').append("<p>"+data.comment+"</p>");
-        }
-        });
-    
- 
-</script>
- </div>
-
-                    
-                    <div class="error" id="error" hidden></div>
+        <div class="error" id="error" hidden></div>
              
             </div>
         </div>
     </div>
 </div>
-
-<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-            <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script>
     function show(p1, p2) {
         let li01 = document.getElementById(p1)
@@ -191,3 +123,19 @@ var socket = io();
     show("li03", "../public/imgs/earphone3.jpeg")
     show("li04", "../public/imgs/earphone2.jpeg")
 </script>
+
+{{!-- comment --}}
+<div class="header"><h3>comment</h3></div>
+	<!--form method="post"-->
+	 	<input  id="commentByID" type="text" placeholder="name" name="commentBy" /></br>
+	 	<textarea  id="commentBodyID" rows="3" cols="50" placeholder="your comment..." name="commentBody" ></textarea></br>
+	 	<button class="submitButton" id="commentSubmit" >Post</button>
+	 <!--/form-->
+	<div class="comments-section">
+		<template>
+			<h3>{cB}</h3>
+		</template>
+	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script src="../public/js/push.js"></script>
