search, add product, display product, add image to product

--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -30,7 +30,7 @@
                         <a class="carousel-control right" href="#myCarousel" data-slide="next">&rsaquo;</a>
                     </div>
                     <h3 class="mg-md">
-                        {{this.pname}}
+                        {{this.p_name}}
                     </h3>
                     <span class="label label-default">Price: ${{this.price}}</span>
                     <span class="label label-warning">Quantity: {{this.quantity}}</span>
