--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,15 +10,15 @@
             <form  name ="phrase" action="/login" method="POST" id="login-form" class="login-form">
               
               <div class="form-group">
-                <label for="name" class="clsformLabel">Username:</label>
-                <input type="text" class="form-control" id="name" name="name" placeholder="Username"
+                <label for="name" class="clsformLabel">Email:</label>
+                <input type="text" class="form-control" id="email" name="email" placeholder="email"
                     required="true">
                 {{!-- <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span> --}}
               </div>
                 
               <div class="form-group">
                 <label for="password" class="clsformLabel">Password:</label>
-                <input type="text" class="form-control" id="password" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp">
                 <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
             
