--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,21 +4,22 @@
         <h2 class="signup-h2">Login Market IT</h2>
         <br/>
 
-        <div class="container">
+    <div class="container">
         <div class="row justify-content-center ">
           <div class="col-lg-8  col-12 jumbotron cntsignupback">
-            <form  name ="phrase" action="/login" method="POST" id="login-form" class="login-form">
+            <form  name ="phrase" action="/login" method="POST" id="login_form" class="login-form" onsubmit="return validation()">
               
               <div class="form-group">
-                <label for="name" class="clsformLabel">Email:</label>
-                <input type="text" class="form-control" id="email" name="email" placeholder="email"
+                <label for="name" class="clsformLabel">Username:</label>
+                <input type="text" class="form-control" id="logname" name="name" placeholder="Username"
                     required="true">
+                    <span id="match"></span>
                 {{!-- <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span> --}}
               </div>
                 
               <div class="form-group">
                 <label for="password" class="clsformLabel">Password:</label>
-                <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp">
+                <input type="password" class="form-control" id="logpassword" name="password" placeholder="Password" required="true" aria-describedby="passwordHelp">
                 <span id="passwordHelp" class="form-text text-muted" style="display: none;">Please enter a valid password.</span>
               </div>
             
@@ -29,6 +30,9 @@
           </div>
         </div>
       </div>
+
+
+
 
 
 
@@ -69,6 +73,6 @@
                 <div class="shadow"></div> --}}
     </article>
     <div class="error" id="error">{{error}}</div>
-    <script type="text/javascript" src="../public/js/client_side.js"></script>
+    <script type="text/javascript" src="../public/js/signup.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </div>
