--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,7 +5,7 @@
       <div class="container">
         <div class="row justify-content-center ">
           <div class="col-lg-8  col-12 jumbotron cntsignupback">
-            <form  name ="signup" action="/signup" method="POST" id="signup-form" class="signup-form">
+            <form  name ="signup" action="/signup" method="POST" id="signup_form" class="signup-form" onsubmit="return validationForm()">
               <div class="form-group">
                 <label for="firstname" class="clsformLabel">First Name</label>
                 <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name" aria-describedby="firstHelp">
@@ -67,7 +67,9 @@
           </div>
         </div>
       </div>
-      <hr>
+      <div class="error" id="error">{{error}}</div>
+    <script type="text/javascript" src="../public/js/signup.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </div>
       
        
