--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -35,7 +35,7 @@
             </div>
             <div class="col-lg-7 col-md-6">
                 <div class="product_details">
-                    <h3>{{product.pname}}</h3>
+                    <h3>{{product.p_name}}</h3>
                     <div class="product_price">
                         <span class="current_price">${{product.price}}</span>
                         <span class="old_price">$368.00</span>
@@ -44,7 +44,7 @@
                         <a href="#comments">1 Review</a>
                     </div>
                     <div class="product_description">
-                        <p>{{product.pdescription}}</p>
+                        <p>{{product.p_description}}</p>
                     </div>
                     <div class="product_details_action">
                         <div class="product_stock">
