--- a/views/products.handlebars
+++ b/views/products.handlebars
@@ -38,7 +38,7 @@
                     <p class="text-muted">
                         {{this.p_description}}
                     </p>
-                    <form method="GET" action="/{{this._id}}"><button type="submit" class="btn btn-primary btn-sm">View Details</button></a>
+                    <form method="GET" action="/products/{{this.product_id}}"><button type="submit" class="btn btn-primary btn-sm">View Details</button></a>
                 </div>
                 {{/each}}
                 <div class="col-sm-4">
