--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
               
               <div class="form-group">
                 <label for="name" class="clsformLabel">Username:</label>
-                <input type="text" class="form-control" id="logname" name="name" placeholder="Username"
+                <input type="text" class="form-control" id="logname" name="email" placeholder="Username"
                     required="true">
                     <span id="match"></span>
                 {{!-- <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span> --}}
