--- a/views/buy.handlebars
+++ b/views/buy.handlebars
@@ -22,12 +22,12 @@
         <div class="row">
             <div class="col-lg-5 col-md-6">
                 <div class="picture-big ">
-                        <img src="../{{product.image_path}}" class="img-responsive" id="pic" />
+                        <img src="/{{product.image_path}}" class="img-responsive" id="pic" />
                 </div>
             </div>
             <div class="col-lg-7 col-md-6">
                 <div class="product_details">
-                    <h3>{{product.pname}}</h3>
+                    <h3>{{product.p_name}}</h3>
                     <div class="product_price">
                         <span class="current_price">${{product.price}}</span>
                     </div>
@@ -35,16 +35,23 @@
                         <label>Quantity:</label>
                         <span class="current_quantity">{{product.quantity}}</span>
                     </div>
+                    <div class="product_quantity">
+                        <label>Sold by:</label>
+                        <span class="current_quantity">{{seller.firstName}}</span>
+                    </div>
                 </div>
-                <div class ="message">
-                    <label>Seller:</label>
-                    <h3>{{product.seller}}</h3>
-                    <form name ="phrase" id="myForm" class="new-palindrome-form">
-                        <label for="text_input">Send Message to Seller {{product.seller}}:</label>
+                <div class="message">
+                    <form name="phrase" id="myForm" class="new-palindrome-form" method="POST" action="http://localhost:3000/products/buy/{{product.product_id}}">
                         <div class="form-group">
-                            <textarea type="text" rows="3" cols="30" class="form-control" id="text_input" name="text_input" placeholder="Message"></textarea>
+                            <label>Quantity:</label>
+                            <input min="1" max="{{product.quantity}}" type="number" name="quantity" required>
                         </div>
-                        <button type="submit" class="btn btn-primary" id ="comment-button">Send Message</button>
+                        <label for="text_input">Send Message to Seller :</label>
+                        <div class="form-group">
+                            <textarea type="text" rows="3" cols="30" class="form-control" id="text_input" name="message"
+                                placeholder="Message"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary" id="comment-button">Send Message</button>
                     </form>
                     <div class="error" id="error" hidden></div>
                 </div>
@@ -52,10 +59,9 @@
 
         </div>
 
-        
+
     </div>
 </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-	
