--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
       <hr>
-      <h2>User Bio</h2>
+      <h2>User Profile</h2>
       <hr>
       <div class="container">
         <div class="row justify-content-center">
@@ -16,10 +16,10 @@
               </div>
               <div class="form-group">
                 <label ><h2>Email</h2></label>
-				        <p class=useremail>{{useremail}}</p>
+				        <p class=useremail>{{email}}</p>
               </div>
               <div class="form-group" name="userimageform" id="userimageform">
-                <label for="userimage"><h2>Upload Your Image</h2></label>
+                <label for="userimage"><h2>Upload Product</h2></label>
                 <input type="file" id="userimage" name="userimage" accept="image/jpg, image/jpeg">
                 <hr>
                 <button type="submit" class="btn btn-primary" id ="userimage-button">Submit</button>
