--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,11 @@
         <br />
         <h2 class="signup-h2">Login Market IT</h2>
         <br/>
-
+{{#if errors}}
+            {{#each errors}}
+            <div class="alert alert-danger"> {{msg}}</div>
+            {{/each}}
+      {{/if}}
     <div class="container">
         <div class="row justify-content-center ">
           <div class="col-lg-8  col-12 jumbotron cntsignupback">
