comments getting added to db

--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -106,7 +106,7 @@
 
                     <input  id="commentByID" type="text" placeholder="name" name="commentBy" /></br>
                     <textarea  id="commentBodyID" rows="3" cols="50" placeholder="your comment..." name="commentBody" ></textarea></br>
-                    <button class="submitButton" id="commentSubmit" >Make Comment</button>
+                    <button class="submitButton" id="commentSubmit" value='{{product.product_id}}'>Make Comment</button>
 
                     <div class="comments-section">
                         <template>
