--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -7,22 +7,25 @@
           <div class="col-lg-8  col-12 jumbotron">
             <form>
               <div class="form-group">
-                <label ><h2>Name</h2></label>
-                <p class=username>{{username}}</p>
+                <label ><h2>First Name</h2></label>
+                <p class=username>{{user.firstName}}</p>
               </div>
+
               <div class="form-group">
-                <label ><h2>ID</h2></label>
-				        <p class=userid>{{userid}}</p>
+                <label ><h2>Last Name</h2></label>
+                <p class=username>{{user.lastName}}</p>
               </div>
               <div class="form-group">
                 <label ><h2>Email</h2></label>
-				        <p class=useremail>{{email}}</p>
+				        <p class=useremail>{{user.email}}</p>
               </div>
               <div class="form-group" name="userimageform" id="userimageform">
-                <label for="userimage"><h2>Upload Product</h2></label>
-                <input type="file" id="userimage" name="userimage" accept="image/jpg, image/jpeg">
+                <label for="userimage"><h2>Uploaded Product</h2></label>
+                
                 <hr>
-                <button type="submit" class="btn btn-primary" id ="userimage-button">Submit</button>
+                <button type="submit" class="btn btn-primary" id ="userimage-button">Add Product
+                <a href="http"
+                </button>
               </div>
             </form>
           </div>
