--- a/views/detail.handlebars
+++ b/views/detail.handlebars
@@ -103,17 +103,24 @@
                 <div class="tab-pane fade" id="review">
                     {{!-- comment --}}
                     <div class="header"><h3>comment</h3></div>
+                    <table class="table table-hover" id="comment-table">
+                        <caption>Recent comments</caption>
+                        <thead>
+                            <tr>
+                                <th>users</th>
+                                <th>comments</th>
+                                <th>time</th>
+                            </tr>
+                        </thead>
 
+                        <tbody>
+                            
+                        </tbody>
+                    </table>
                     <input  id="commentByID" type="text" placeholder="name" name="commentBy" /></br>
                     <textarea  id="commentBodyID" rows="3" cols="50" placeholder="your comment..." name="commentBody" ></textarea></br>
                     <button class="submitButton" id="commentSubmit" value='{{product.product_id}}'>Make Comment</button>
 
-                    <div class="comments-section">
-                        <template>
-                            <h3>{cB}</h3>
-                        </template>
-                    </div>
-                    
                 </div>
             </div>
             <div>
