--- a/views/info.handlebars
+++ b/views/info.handlebars
@@ -3,6 +3,7 @@
       <h2>User Profile</h2>
       <hr>
       <div class="container">
+        
         <div class="row justify-content-center">
           <div class="col-lg-8  col-12 jumbotron">
             <form>
@@ -21,10 +22,10 @@
               </div>
               <div class="form-group" name="userimageform" id="userimageform">
                 <label for="userimage"><h2>Uploaded Product</h2></label>
+                {{!-- <p class="uploadedimages">{{products.image_name}}</p> --}}
                 
                 <hr>
-                <button type="submit" class="btn btn-primary" id ="userimage-button">Add Product
-                <a href="http"
+                <input type="button" onclick="location.href='/products/productup';" value="Add Product" />
                 </button>
               </div>
             </form>
