--- a/public/css/product.css
+++ b/public/css/product.css
@@ -263,3 +263,21 @@ ul .picture-small-li {
 #myTabContent{
     text-align: center;
 }
+
+
+
+
+.products-img-list{
+    width: 370px;
+    height: 270px;
+}
+
+.products-img-list img{
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.products-description{
+    width: 370px;
+    height: 86px;
+}
