add tota11y check

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
     <script src="/public/js/blocs.js"></script>
     <script src="/public/js/lazysizes.min.js" defer></script>
     <script src="/public/js/edit.js"></script>
-
+    <script src="/public/js/tota11y.min.js"></script>
 
     <title>Home</title>
 
