fix client side validation for product post

--- a/views/postproduct.handlebars
+++ b/views/postproduct.handlebars
@@ -53,6 +53,9 @@
           <button type="submit" class="btn btn-primary" id ="productup-button">Post</button>
         </div>
       </form>
+      <div class="text-center">
+        <div class="alert alert-danger" id="error" hidden>{{error}}</div>
+      </div>
     </div>
   </div>
 </div>
